--- a/src/AppBundle/Resources/translations/messages.pl.yml
+++ b/src/AppBundle/Resources/translations/messages.pl.yml
@@ -1,3 +1,14 @@
 Friend list: Lista znajomych
 User profile: Profil użytkownika
 View profile: Przejdź do profilu
+Last online: Ostatnio online
+All: Wszystkich
+Online: Online
+Offline: Offline
+Busy: Zajęty
+Away: Daleko
+Snooze: Drzemka
+Looking to trade: Szuka do wymiany
+looking to play: Szuka do gry
+Owned games: Posiadane gry
+Times played: Czas gry
